feat: implement products endpoint, create product route, product queue
